<resources>
    <string name="app_name">Test</string>
    <!-- Login  -->
    <string name="prompt_email">Email address</string>
    <string name="prompt_password">Password</string>
    <string name="username_error">Use email address</string>
    <string name="password_error">Password should have min. 5 characters</string>
    <string name="login">Login</string>

    <!-- Login result -->
    <string name="login_success">Logging success!</string>
    <string name="login_failed">Logging failed!</string>
    <string name="press_again">Press again to exit</string>

    <!-- Errors -->
    <string name="error_network">Network error</string>
    <string name="error_400">Bad Request - Your request is invalid</string>
    <string name="error_422">Unprocessable Entity - Your request is missing fields or the data contained is incorrect.</string>
    <string name="error_500">Internal Server Error -- We had a problem with our server. Try again in a bit.</string>

</resources>